Changes for 1.5.2
* Rewrote the framework for how sounds are loaded and played, in order to allow more flexible expansion of sound options. Moved sound files to separate user visible folder. (frigoref)

* Temporary hack fix for bug where client computer can not use paratroopers at all, but hosts can. (veqryn)

* Finalizing Alpha rules for test xml. (veqryn)

* Improving in-game Help -> Movement/Selecting Help menu tips. (veqryn)

* Holding down ALT key while selecting or deselecting units will now add/remove 10 units at a time. (veqryn)

* Possible fix for battle window disappearing after closing, with battle panel not becoming visible again. (frigoref)

* Abstraction of ClientGame and ServerGame into AbstractGame. (frigoref)

* Deleting duplicate m_bridge variables that were hiding the real m_bridge variables of the extended classes. (veqryn)

* Maintaining compatibility with Java 5. (veqryn)

* Abstraction of Launcher code to an abstract class. (frigoref)

* Fixed bug where sea placement could be done in territories captured this turn. (veqryn)

* Fixed bug with bid placement of sea units, which was previously not allowing them to be placed anywhere at all. (veqryn)

* Changed Battle Calculator to only count units that can die in combat, in the unit totals. No longer counts AA Guns or other units like Factories, in the unit totals, even if they are present. (veqryn)

* Fixed infinite loop in Dynamix combat calculation routine, resulting from thinking battles that were lost were really won, then increasing the number of defenders to try to reach a "losing" battle, except that no losing battle ever came. (veqryn)

* Preventing Dyanmix AI from purchasing any infrastructure or maxBuiltPerPlayer units. (veqryn)

* Reduced calls to find map resource paths to a single time, when the map is first loaded. Should speed things up a little. (veqryn)
