@@ -1,4 +1,8 @@
 Changes for 1.5.2
+* Forced user preferences for individual sound muting choices to be saved by each local vm. (veqryn)
+
+* Allowed individual sounds to be muted, and separated simple Messenging from Slapping with different sounds for each. (frigoref)
+
 * Rewrote the framework for how sounds are loaded and played, in order to allow more flexible expansion of sound options. Moved sound files to separate user visible folder. (frigoref)
 
 * Temporary hack fix for bug where client computer can not use paratroopers at all, but hosts can. (veqryn)
